# FishEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt
code/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FishEngine.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  Shaders.vcxproj  Shaders.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
code/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  engine.vcxproj  engine.vcxproj.filters  imgui.ini  notes.txt  todo.txt
shaders/: default_lit.frag  default_lit.frag.spv  gradient.comp  mesh.frag  mesh.vert  redTriangle.frag  textured_lit.frag  textured_lit.frag.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv  triangleMesh.vert  triangleMesh.vert.spv
src/: CMakeLists.txt  References.txt  default_scene_01.json  fish_camera.cpp  fish_camera.h  fish_components.h  fish_ecs.h  fish_ecs_systems.cpp  fish_ecs_systems.h  fish_gpu_data.h  fish_json_handler.cpp  fish_json_handler.h  fish_loader.cpp  fish_loader.h  fish_logger.h  fish_pipeline.cpp  fish_pipeline.h  fish_resource.cpp  fish_resource.h  fish_resource_data.h  fish_resource_manager.cpp  fish_resource_manager.h  fish_scene.cpp  fish_scene.h  fish_timer.cpp  fish_timer.h  fish_utils.cpp  fish_utils.h  loader.cpp  loader.h  main.cpp  mesh.cpp  mesh.h  nlohmann_json.h  nlohmann_json_fwd.h  test_save.json  texture.cpp  texture.h  timer.cpp  timer.h  (+12 more)
